view page working

--- a/app/views/create.html
+++ b/app/views/create.html
@@ -20,7 +20,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="row in presentation.content">
+      <tr ng-repeat="row in presentation.content.data">
         <td>
           {{ row.original }}
         </td>
