main page fixed, everything seems to be working awesomely

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,10 +34,16 @@ tr.selected {
         }
     }
 }
+tr.hidden {
+    display: none;
+}
 
 .margin-top {
     margin-top: 20px;
 }
 .margin-bottom {
     margin-bottom: 20px;
+}
+.title {
+    font-weight: bold;
 }
