--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,18 @@
-<div class="hero-unit">
-  <h1>'Allo, 'Allo!</h1>
-  <p>You now have</p>
-  <ul>
-      <li ng-repeat="thing in awesomeThings">{{thing}}</li>
-  </ul>
-  <p>installed.</p>
-  <h3>Enjoy coding! - Yeoman</h3>
-</div>
+<section>
+  <h1>Presentation Proof of Concept App</h1>
+</section>
+
+<section>
+  <h3>
+    Existing Presentations:
+  </h3>
+  <table class='table table-striped table-bordered'>
+    <tbody>
+      <tr ng-repeat='presentation in presentations'>
+        <td class='title'>{{presentation.metadata.title}}</td>
+        <td><a class='btn' ng-href="#/view/{{presentation.metadata.desiredURL}}">view</a></td>
+        <td><a class='btn' ng-href="#/presenters-control/{{presentation.metadata.desiredURL}}">control</a></td>
+      </tr>
+    </tbody>
+  </table>
+</section>
