--- a/app/views/presenters-control.html
+++ b/app/views/presenters-control.html
@@ -2,6 +2,9 @@
   <h1>{{ presentation.metadata.title }}</h1>
   <h3>{{ presentation.metadata.presenter }}</h3>
 </section>
+<section>
+  You can view the presentation at <a ng-href="#/view/{{presentationId}}" target='_blank'>/view/{{ presentationId }}</a>
+</section>
 <section class='margin-bottom'>
   <button ng-click="resetPosition()" class="btn">Reset to Start</button>
 </section>
@@ -25,6 +28,9 @@
     </tbody>
   </table>
 </section>
+<section ng-if="presentation.content.index < presentation.content.data.length">
+  You finished the presentation! <button ng-click="resetPosition()" class="btn">Reset to Start</button>
+</section>
 <section>
-  <button ng-click="incrementPosition()" class="btn pull-right">Increment Position</button>
+  <button ng-click="incrementPosition()" ng-disabled="presentation.content.index >= presentation.content.data.length" class="btn pull-right">Increment Position</button>
 </section>
